--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "eslint:recommended"],
+  "quotes": ["warning", "single", "avoid-escape"],
+  "jsx-quotes": ["warning", "prefer-double"],
+  "no-restricted-imports": ["error", {
+    "name": "@testing-library/react",
+    "message": "Please use `@utils//testing-library` instead."
+  }],
 }
